The content of the columns from stacked user lists is not aligned #113 - Introduce a new macro parameter "fixed table layout" (boolean,   defaulting to false) - Update userList CSS for ellipsing the text when a cell overflows

--- a/xwiki-pro-macros-api/src/main/resources/css/userlist.css
+++ b/xwiki-pro-macros-api/src/main/resources/css/userlist.css
@@ -1,3 +1,14 @@
-.xwiki-userlist-user-avatar {
-  width: 50px;
+.xwiki-userlist-fixed-layout {
+  table-layout: fixed;
+}
+
+/** Make sure table cells do not overflow when containing for instance long e-mail addresses. */
+.xwiki-userlist tr td {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.xwiki-userlist tr td.xwiki-userlist-user-avatar {
+  width: 70px;
+  text-align: center;
 }
